--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,25 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>To Do List</title>
+
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
-    <h1><%= kindOfDay %></h1>
+    <div class="box" id="heading">
+        <h1><%= kindOfDay %></h1>
+    </div>
 
-    <ul>
-        
+    <div class="box">
     <% for (let i = 0; i < newListItems.length; i++) { %>
-        <li><%= newListItems[i] %></li>
+
+        <div class="item">
+            <input type="checkbox" />
+            <p><%= newListItems[i] %></p>
+        </div>
+
     <% } %>
 
-    </ul>
+    <form class="item" action="/" method="POST">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
 
-    <form action="/" method="POST">
-        <input type="text" name="newItem" />
-
-        <button type="submit" name="button">Add</button>
+        <button type="submit" name="button">+</button>
     </form>
+    </div>
     
 </body>
 </html>
