--- a/views/list.ejs
+++ b/views/list.ejs
@@ -12,7 +12,7 @@
 <body>
 
     <div class="box" id="heading">
-        <h1><%= kindOfDay %></h1>
+        <h1><%= listTitle %></h1>
     </div>
 
     <div class="box">
@@ -28,7 +28,7 @@
     <form class="item" action="/" method="POST">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
 
-        <button type="submit" name="button">+</button>
+        <button type="submit" name="list" value="<%= listTitle %>">+</button>
     </form>
     </div>
     
